crates/math-core/tests/snapshots/error_test__ampersand_outside_array.snap
---
source: crates/math-core/tests/error_test.rs
expression: x & y
---
Error: Got "&", which may only appear in a table-like environment.
   ╭─[ <input>:1:3 ]
   │
 1 │ x & y
   │   ┬  
   │   ╰── may only appear in a table-like environment
───╯
